remove java 1.5 dependency
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/trunk@791576 13f79535-47bb-0310-9956-ffa450edef68